--- a/Seção_02 - JavaScript básico - Para iniciantes/aula_034 - Exercícios função, array e objetos/index.html
+++ b/Seção_02 - JavaScript básico - Para iniciantes/aula_034 - Exercícios função, array e objetos/index.html
@@ -10,21 +10,26 @@
     <form action="#" class="form">
 
         <label for="nome">Nome:</label>
-        <input id="nome" type="text">
+        <input class="nome" type="text">
 
         <label for="sobrenome">Sobrenome:</label>
-        <input id="sobrenome" type="text">
+        <input class="sobrenome" type="text">
 
         <label for="peso">Peso:</label>
-        <input id="peso" type="text">
+        <input class="peso" type="text">
 
         <label for="altura">Altura:</label>
-        <input id="altura" type="text">
+        <input class="altura" type="text">
 
-        <button onclick="enviar()">Enviar</button>
+        <button type="submit">Enviar</button>
 
     </form>
 
+    <div>
+        <p class="resp">
+
+        </p>
+    </div>
 
     <script src="./index.js"></script>
 </body>
