--- a/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/index.html
+++ b/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/index.html
@@ -35,11 +35,11 @@
             <form action="">
                 <h3>Calcule seu IMC</h3>
 
-                <label for="peso">Peso</label>
-                <input type="text" id="peso">
+                <label for="peso">Peso (Kg)</label>
+                <input type="number" id="peso">
 
-                <label for="altura">Altura</label>
-                <input type="text" id="altura">
+                <label for="altura">Altura (M)</label>
+                <input type="number" id="altura">
 
                 <button>Enviar</button>
             </form>
