--- a/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/index.html
+++ b/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/index.html
@@ -43,7 +43,7 @@
 
                 <button>Enviar</button>
             </form>
-            <div class="resp">
+            <div id="resp">
             </div>
 
     </section>
