--- a/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/index.html
+++ b/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/index.html
@@ -32,16 +32,16 @@
                     Obesidade III <br/>
                 </p>
             </div>
-            <form action="">
+            <form action="#" id="form">
                 <h3>Calcule seu IMC</h3>
 
                 <label for="peso">Peso (Kg)</label>
-                <input type="number" id="peso">
+                <input type="number" id="peso" name="peso">
 
                 <label for="altura">Altura (M)</label>
-                <input type="number" id="altura">
+                <input type="number" id="altura" name="altura">
 
-                <button>Enviar</button>
+                <button type="submit">Enviar</button>
             </form>
             <div id="resp">
             </div>
