--- a/Seção_03 - Lógica de programação/Aula 048 __ Exercício com switch e date/index.html
+++ b/Seção_03 - Lógica de programação/Aula 048 __ Exercício com switch e date/index.html
@@ -11,7 +11,20 @@
 
 <body>
     <section class="container">
-        <h1 class="resp"></h1>
+        <div>
+            <h2>Solução 01</h2>
+            <p class="resp1"></p>
+        </div>
+
+        <div>
+            <h2>Solução 02</h2>
+            <p class="resp2"></p>
+        </div>
+
+        <div>
+            <h2>Solução 03</h2>
+            <p class="resp3"></p>
+        </div>
     </section>
 
     <script src="./assets/js/index.js"></script>
