--- a/Seção_03 - Lógica de programação/Aula 066 __ Exercício - Criando um timer com setInterval/index.html
+++ b/Seção_03 - Lógica de programação/Aula 066 __ Exercício - Criando um timer com setInterval/index.html
@@ -18,7 +18,7 @@
             <div class="buttons">
                 <button type="button" class="volta hidden">Volta</button>
                 <button type="button" class="iniciar">Iniciar</button>
-                <button type="button" class="pausar">Pausar</button>
+                <button type="button" class="pausar invalid">Pausar</button>
                 <button type="button" class="zerar">Zerar</button>
             </div>
             <div class="lapsContainer">
