--- a/Seção_03 - Lógica de programação/Aula 067 __ Criando uma Lista de tarefas/index.html
+++ b/Seção_03 - Lógica de programação/Aula 067 __ Criando uma Lista de tarefas/index.html
@@ -11,29 +11,14 @@
 
 <body>
     <section class="container">
-        <h1>Lorem ipsum dolor sit amet </h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ipsam facilis aperiam molestias rerum,
-                odit dolore inventore dolores voluptates eum ipsa expedita distinctio neque accusamus corrupti sapiente
-                harum libero nihil rem voluptatibus eligendi nostrum, ad corporis. Quidem maxime, magni laboriosam,
-                sequi impedit doloribus qui, nesciunt cumque corrupti.
-            </p>
+        <h1>LISTA DE TAREFAS</h1>
+        <div class="input">
+            <input type="text" class="taskInput">
+            <button type="button" class="addTaskBtn">Adicionar Tarefa</button>
+        </div>
+        <ul class="taskContainer hidden">
 
-            <form action="">
-                <label for="input-teste-1">Label teste #1</label>
-                <input type="text" id="input-teste-1">
-
-                <label for="input-teste-2">Label teste #2</label>
-                <input type="text" id="input-teste-2">
-
-                <label for="input-teste-3">Label teste #3</label>
-                <input type="text" id="input-teste-3">
-
-                <label for="input-teste-4">Label teste #4</label>
-                <input type="text" id="input-teste-4">
-
-                <button>Enviar</button>
-            </form>
+        </ul>
 
     </section>
 
