--- a/Seção_03 - Lógica de programação/Aula 067 __ Criando uma Lista de tarefas/index.html
+++ b/Seção_03 - Lógica de programação/Aula 067 __ Criando uma Lista de tarefas/index.html
@@ -16,8 +16,7 @@
             <input type="text" class="taskInput">
             <button type="button" class="addTaskBtn">Adicionar Tarefa</button>
         </div>
-        <ul class="taskContainer hidden">
-
+        <ul class="taskContainer">
         </ul>
 
     </section>
